[package]
name = "hazy-transport"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A simple network simulator"
repository = "https://github.com/piot/hazy-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datagram-transport = "0.0.1"
rand = "0.8.4"
